       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * Starting with this release, the ldiskfs backing filesystem required
        by Lustre is now in its own package, lustre-ldiskfs.  This package
        should be installed.  It is versioned separately from Lustre and
        may be released separately in future.

Severity   : normal
Frequency  : only for SLES9
Bugzilla   : 12543
Description: Routinely utilize latest Quadrics drivers in CFS releases
Details    : Update patch qsnet-suse-2.6.patch.

Severity   : normal
Frequency  : only for sles10
Bugzilla   : 12771
Description: Update patches for SLES 10 SP1 kernel.
Details    : Update the patch vfs_intent-2.6-sles10.patch.

Severity   : normal
Frequency  : rare
Bugzilla   : 12543
Description: Routinely utilize latest Quadrics drivers in CFS releases
Details    : Update patch qsnet-rhel4-2.6.patch.

Severity   : minor
Frequency  : at statup only
Bugzilla   : 12860
Description: mds_lov_synchronize race leads to various problems
Details    : simultaneous MDT->OST connections at startup can cause the 
	     sync to abort, leaving the OSC in a bad state.

Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info
Details    : add a new environment variable (namely LUSTRE_VERS) which allows
	     to override the lustre version.

Severity   : normal
Frequency  : 2.6.18 servers only
Bugzilla   : 12546
Description: ll_kern_mount() doesn't release the module reference
Details    : The ldiskfs module reference count never drops down to 0
	     because ll_kern_mount() doesn't release the module reference.

Severity   : normal
Frequency  : rare
Bugzilla   : 12470
Description: server LBUG when using old ost_num_threads parameter
Details    : Accept the old ost_num_threads parameter but warn that it
	     is deprecated, and fix an off-by-one error that caused an LBUG.

Severity   : normal
Frequency  : rare